# Workcell-ROS

./: .gitignore  HTML_File_Upload  README.md  example.gcode  gcode_macros.cfg  install.sh  klipper2ros.py  shelf.json
Shelving Client Server/: client.py  server.py  shelf.py
mc2425/: package.xml  setup.cfg  setup.py
mc2425/mc2425/: addPrint.py  clearShelf.py  discordNotification.py  gantry.py  gcode.py  gridReader.py  mainController.py  pickAndPlace.py  plate_bank_reading.py  printer.py  printerNode.py  queueGcode.py  queueInteraction.py  removePart.py  requestGcode.py  shelf.py  shelfCheck.py  shelfClass.py  shelfUpdate.py  unixSocketHandler.py  variables.py
mc2425_msgs/: CMakeLists.txt  package.xml
mc2425_msgs/msg/: AddPart.msg  PnPRemoval.msg  ShelfUpdate.msg
mc2425_msgs/srv/: FileTransfer.srv
